[package]
name = "taskwarrior-web"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "parking_lot",
] }
serde_json = "1.0.114"
tera = { version = "1.20.0" }
anyhow = "1.0.80"
lazy_static = "1.4.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "tracing", "trace"] }
chrono = { version = "0.4.34", features = ["serde"] }
csv = "1.3.1"
indexmap = { version = "2.2.5", features = ["serde"] }
rand = "0.9.0-beta.3"
dotenvy = { version = "0.15.7" }
taskchampion = { version = "2.0.3", default-features = false, features = [] }
serde_path_to_error = "0.1.17"
shell-words = "1.1.0"
directories = "6.0.0"
toml = "0.8.22"
config = { version = "0.15.11", default-features = false, features = ["toml"] }

[dev-dependencies]
tempfile = "3.19.1"
