[package]
name = "taskwarrior-web"
version = "2.0.1"
edition = "2024"
resolver = "3"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "parking_lot",
] }
serde_json = "1.0.149"
tera = { version = "1.20.1" }
anyhow = "1.0.102"
tower-http = { version = "0.6.8", features = ["fs", "tracing", "trace"] }
chrono = { version = "0.4.44", features = ["serde"] }
indexmap = { version = "2.13.0", features = ["serde"] }
rand = "0.10.0"
dotenvy = { version = "0.15.7" }
taskchampion = { git="https://github.com/tmahmood/taskchampion", default-features = false, features = ["storage-sqlite", "bundled"] }
serde_path_to_error = "0.1.20"
shell-words = "1.1.1"
directories = "6.0.0"
toml = "0.9.1"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
linkify = "0.10.0"
listenfd = "1.0.2"

[dev-dependencies]
tempfile = "3.25.0"
